--- a/Sem-2/CGR-MP/CMakeLists.txt
+++ b/Sem-2/CGR-MP/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
-project(CGR_MP)
+project(CGR_MP C)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_C_STANDARD 11)
 
-add_executable(CGR_MP main.cpp)
+include_directories("//usr//local//lib//libgraph-1.0.2//")
+
+build_command("lgraph")
+
+add_executable(CGR_MP main.c)
