--- a/Sem-2/CGR-MP/CGR-MP.cbp
+++ b/Sem-2/CGR-MP/CGR-MP.cbp
@@ -32,6 +32,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-lwinmm" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
